gl51-master/src/test/deca/codegen/valid/class2.deca
// Description :
//    Test de constructeur
//
// Résultat :
//
//
// Historique :
//    créé le 01/01/2024


class A_class{
    int a = 1;
}

{
    A_class A = new A_class();
    println(A.a);
}