gl51-master/src/test/deca/codegen/invalid/float_overflow.deca
// Description :
//      Tests de division par zéro
// Résultats :
//      ERROR: Float overflow




{
    println(1.0e+20f*1.0e+20f);
}